# snAPI

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.md  requirements.txt
docs/source/: advanced_usage.rst  basic_usage.rst  conf.py  index.rst
examples/: pubmed_example.py
examples/api_client/: api.py  client.py
src/snAPI/: __init__.py  api.py  cache.py  httpreq.py  sessions.py
tests/: test_all.py  test_api.py  test_api_client.py  test_caching.py
