[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pySnAPI"
version = "0.0.3"
authors = [
  { name="Mannan Bhardwaj", email="mannanb728@gmail.com" },
]
description = "A library for WebAPI client frameworking"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'aiohttp',
  'requests',
]
[project.urls]
"Homepage" = "https://github.com/MannanB/snAPI"
"Bug Tracker" = "https://github.com/MannanB/snAPI/issues"